# context-engine-rs

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: windows.yml
Scripts/: check-file-size.sh  release.sh
apps/desktop/: .gitignore  README.md  package.json
crates/ctx-core/: Cargo.toml
crates/ctx-ffi/: Cargo.toml  cbindgen.toml
crates/ctx-mcp/: Cargo.toml
crates/ctx-mcp/src/: install.rs  main.rs
crates/ctx-mcp/src/auth/: callback.rs  mod.rs  oauth.rs  store.rs  util.rs
crates/ctx-mcp/src/xai/: http.rs  media.rs  mod.rs  specs.rs  util.rs
crates/ctx-wasm/: Cargo.toml
crates/nerve-agent/: Cargo.toml
crates/nerve-gui/: Cargo.toml  README.md  Trunk.toml  index.html  styles.css
crates/nerve-proto/: Cargo.toml
crates/nerve-proto/src/: command.rs  flow.rs  job.rs  lib.rs  protocol.rs  protocol_codegen.rs  risk.rs  tool_spec.rs
crates/nerve-proto/src/command/: runtime_command_impl.rs
crates/nerve-proto/src/event/: ctor.rs  mod.rs
crates/nerve-runtime/: Cargo.toml
crates/nerve-tui/: Cargo.toml
crates/nerve-wechat/: Cargo.toml
crates/nerve-workstation/: Cargo.toml
docs/: CONVENTIONS.md
docs/analysis/: crate-layout-architecture.md
docs/designs/: agent-config-and-model-selection.md  agent-exec-sandbox.md  agent-long-term-memory.md  agent-orchestration.md  agent-working-memory.md  architecture-north-star.md  code-graph.md  gui-architecture.md  gui-codex-visual-spec.md  hermetic-replay-isolation.md  optimization-pass-2026-06-24.md  session-layer.md  subagents.md  trust-substrate.md
docs/parity/: captures.json  (+2 more)
fuzz/: Cargo.toml
(+354 files in other folders)
