[package]
name = "ctx-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
semantic = ["ctx-core/semantic"]

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
ctx-core = { path = "../ctx-core" }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
