[package]
name = "ctx-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ctx-core = { path = "../ctx-core" }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
